--- a/2025-10-15_prisma_loginsystem/deno.json
+++ b/2025-10-15_prisma_loginsystem/deno.json
@@ -2,11 +2,13 @@
     "tasks": {
         "dev": "deno run --watch main.ts",
         "prisma": "deno -A prisma",
-        "prisma:seed": "deno -A --env-file seed.ts"
+        "seed": "deno run -A --env-file seed.ts"
     },
     "imports": {
         "@prisma/client": "npm:@prisma/client@^6.17.0",
+        "generated_prisma": "./prisma/client/client.ts",
         "@std/assert": "jsr:@std/assert@1",
+        "hono": "npm:hono@^4.9.12",
         "prisma": "npm:prisma@^6.17.0"
     },
     "fmt": {
